@@ -1,4 +1,8 @@
 Changes for 1.3.3.0
+* Added matches for dependencies and transported by. (veqryn)
+
+* Fixed route finder to find better routes for units. Will stop finding sea routes for land units, and land routes for sea units. Will try to avoid enemies, AA guns, and neutrals. (veqryn)
+
 * Fixed bugs in canInvadeOnlyFrom. (veqryn)
 
 * Created new unit attachment, canInvadeOnlyFrom, which determines if a unit can conduct amphibious assaults or if it has to disembark in noncombat. (edwin van der wal)
